[package]
name = "sg_list_processes"
description = "list-processes ~ list running processes"
repository = "https://github.com/uutils/coreutils/tree/main/src/uu/ps"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
readme.workspace = true

[lints]
workspace = true

[lib]
path = "src/list_processes.rs"

[dependencies]
clap = { workspace = true }
sgcore = { workspace = true }
fluent = { workspace = true }
serde_json = { workspace = true }
procfs = { workspace = true }

[[bin]]
name = "list-processes"
path = "src/main.rs"
