[package]
name = "sg_mv"
description = "mv ~ (uutils) move (rename) SOURCE to DESTINATION"
repository = "https://github.com/uutils/coreutils/tree/main/src/uu/mv"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
readme.workspace = true

[lints]
workspace = true

[lib]
path = "src/mv.rs"

[dependencies]
clap = { workspace = true }
fs_extra = { workspace = true }
indicatif = { workspace = true }
libc = { workspace = true }
thiserror = { workspace = true }
sgcore = { workspace = true, features = [
  "backup-control",
  "fs",
  "fsxattr",
  "update-control",
] }
fluent = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[[bin]]
name = "mv"
path = "src/main.rs"

[dev-dependencies]
divan = { workspace = true }
tempfile = { workspace = true }
sgcore = { workspace = true, features = ["benchmark"] }

[[bench]]
name = "mv_bench"
harness = false
