[package]
name = "sg_new_directory"
description = "new-directory ~ (uutils) create DIRECTORY"
repository = "https://github.com/uutils/coreutils/tree/main/src/uu/new_directory"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
readme.workspace = true

[lints]
workspace = true

[lib]
path = "src/new_directory.rs"

[dependencies]
clap = { workspace = true }
uucore = { workspace = true, features = ["fs", "mode", "fsxattr"] }
fluent = { workspace = true }

[[bin]]
name = "new-directory"
path = "src/main.rs"
