[package]
name = "sg_nl"
description = "nl ~ (uutils) display input with added line numbers"
repository = "https://github.com/klimb/rust-stargate"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
readme.workspace = true

[lints]
workspace = true

[lib]
path = "src/nl.rs"

[dependencies]
clap = { workspace = true }
regex = { workspace = true }
sgcore = { workspace = true }
fluent = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
divan = { workspace = true }
tempfile = { workspace = true }
sgcore = { workspace = true, features = ["benchmark"] }

[[bin]]
name = "nl"
path = "src/main.rs"

[[bench]]
name = "nl_bench"
harness = false
