# spell-checker:ignore logind

[package]
name = "sg_pinky"
description = "pinky ~ (uutils) display user information"
repository = "https://github.com/klimb/rust-stargate"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
readme.workspace = true

[lints]
workspace = true

[features]
feat_systemd_logind = ["sgcore/feat_systemd_logind"]

[lib]
path = "src/pinky.rs"

[dependencies]
clap = { workspace = true }
sgcore = { workspace = true, features = ["utmpx", "entries"] }
fluent = { workspace = true }

[[bin]]
name = "pinky"
path = "src/main.rs"
