[package]
name = "sg_ps"
description = "ps ~ list running processes"
repository = "https://github.com/uutils/coreutils/tree/main/src/uu/ps"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
readme.workspace = true

[lints]
workspace = true

[lib]
path = "src/ps.rs"

[dependencies]
clap = { workspace = true }
sgcore = { workspace = true }
fluent = { workspace = true }
serde_json = { workspace = true }
procfs = { workspace = true }

[[bin]]
name = "ps"
path = "src/main.rs"
